Padding spacing on columns; fixed background element, made expand to fit

--- a/src/grid/editor.scss
+++ b/src/grid/editor.scss
@@ -101,9 +101,14 @@ html {
 
 	&-col {
 		border: thin dashed transparent;
-		display: flex;
 
-		> .wp-block-gutestrap-col {
+		&,
+		& > *:not(.wp-block-gutestrap-col) {
+			display: flex
+		}
+
+		> *,
+		> * > .wp-block-gutestrap-col {
 			width: 100%;
 			align-self: stretch;
 		}
