--- a/src/grid/style.scss
+++ b/src/grid/style.scss
@@ -16,3 +16,13 @@
 .w-100 {
 	width: 100% !important;
 }
+
+.wp-block-gutestrap {
+	&-col {
+		display: flex;
+
+		> div {
+			width: 100%;
+		}
+	}
+}
